k8s/base/network/allow-app-internal-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-internal-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: aquashield
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: aquashield
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 8084
        - protocol: TCP
          port: 8087
        - protocol: TCP
          port: 8088
        - protocol: TCP
          port: 8089
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 9094
